# c4l24-python4lib

./: .gitignore  pyproject.toml  readme.md  requirements.txt  topics.md
docs/: common-patterns.ipynb  dependencies.md  example.ipynb  f-strings.ipynb  new-features.ipynb  notebooks.md  pandas.ipynb  pymarc.ipynb  pytest-parametrization.ipynb  type-hints.ipynb
docs/assets/: 100-harvard.mrc  example.mrc  reference_interactions.csv
