[tool.poetry]
name = "c4l24-python4lib"
authors = ["phette23 <phette23@gmail.com>"]
license = "CC0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.7.1"
pymarc = "^5.1.2"
pytest = "^8.1.1"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
